<resources>
    <string name="app_name">Calculator</string>
    <string name="buttons_fragment">BUTTONS FRAGMENT</string>
    <string name="entry_fragment"></string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_decimal">.</string>
    <string name="button_addition">+</string>
    <string name="button_subtraction">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>
    <string name="button_bracket">( )</string>
    <string name="button_percent">%</string>
    <string name="button_memoryStore">M Store</string>
    <string name="button_memoryRecall">M Recall</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_positiveNegative">+/-</string>
    <string name="button_back">Del</string>
    <string name="button_empty"></string>
    <string name="fragment_calculation">CALCULATION</string>
</resources>