<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentButtons"
    android:background="#92DEC5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">
            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_clear"
                android:textSize="20sp"
                android:background="@drawable/button_border"
                android:textColor="#BDE9EF"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_memoryStore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_memoryStore"
                android:background="@drawable/button_border"
                android:textColor="#BDE9EF"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_memoryRecall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_memoryRecall"
                android:background="@drawable/button_border"
                android:textColor="#BDE9EF"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_back"
                android:textSize="20sp"
                android:background="@drawable/button_border"
                android:textColor="#BDE9EF"
                style="?android:buttonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_7"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_8"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_9"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_divide"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_4"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_5"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_6"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_multiply"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_1"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_2"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_3"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_subtraction"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_decimal"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_0"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
            <Button
                android:id="@+id/button_positiveNegative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_positiveNegative"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_addition"
                android:background="@drawable/digit_button_border"
                android:textColor="#3D0F00"
                style="?android:buttonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/button_equal"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/button_equal"
                android:background="#081E21"
                android:textColor="#BDE9EF"
                android:textSize="30sp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>